[package]
authors = ["Nick Fitzgerald <fitzgen@gmail.com>"]
edition = "2018"
description = "A library for manipulating Souper IR"
documentation = "https://docs.rs/souper-ir"
license = "MIT OR Apache-2.0"
name = "souper-ir"
readme = "./README.md"
repository = "https://github.com/fitzgen/souper-ir"
version = "2.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
id-arena = "2.2.1"

[features]
parse = []
stringify = []

[workspace]
members = [
    "./crates/tests",
    "./fuzz",
]

[package.metadata.docs.rs]
all-features = true
